--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,8 @@
 {
-  "routes": [
+  "rewrites": [
     {
       "source": "/(.*)",
-      "dest": "/"
+      "destination": "/index.html"
     }
   ]
 }
